# MMA-wrapper

./: .gitignore  CMakeLists.txt  setup.py  tester.py
examples/: CMakeLists.txt  example.cpp  hello_mma.cpp
include/: optimizer.h
src/: CMakeLists.txt  MMA.cc  optimizer.cpp  pywrapper.cpp
